# AUT1400-2

AP1400-2-HW1-main/: Dockerfile  test.sh
AP1400-2-HW1-main/include/: hw1.h
AP1400-2-HW1-main/src/: hw1.cpp  main.cpp  unit_test.cpp
AP1400-2-HW2-main/: Dockerfile
AP1400-2-HW2-main/include/: client.h  server.h
AP1400-2-HW2-main/src/: client.cpp  main.cpp  server.cpp
AP1400-2-HW3-main/: CMakeLists.txt  Dockerfile
AP1400-2-HW3-main/include/: bst.h
AP1400-2-HW3-main/src/: bst.cpp  main.cpp  unit_test.cpp
AP1400-2-HW4-main/: CMakeLists.txt
AP1400-2-HW4-main/include/: shared_ptr.h  shared_ptr.hpp  unique_ptr.h  unique_ptr.hpp
AP1400-2-HW4-main/src/: unit_test.cpp
AP1400-2-HW5-main/: CMakeLists.txt  test.sh
AP1400-2-HW5-main/include/: cappuccino.h  espresso_based.h  ingredient.h  mocha.h  sub_ingredients.h
AP1400-2-HW5-main/src/: cappuccino.cpp  espresso_based.cpp  mocha.cpp
AP1400-2-HW6-main/: CMakeLists.txt
AP1400-2-HW6-main/include/: q1.h  q2.h  q4.h
AP1400-2-HW6-main/src/: q.cpp  unit_test.cpp
AUT_AP_2024_Spring_HW1-main/bash/: backup_log.txt  backup_script.sh
AUT_AP_2024_Spring_HW1-main/include/: algebra.h
AUT_AP_2024_Spring_HW1-main/src/: main.cpp
